--- a/udportfolio/index.html
+++ b/udportfolio/index.html
@@ -10,6 +10,36 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
+    <style type="text/css">
+        html {
+            font-size: 100%;
+            overflow-y: scroll;
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            -ms-text-size-adjust: 100%;
+            -webkit-text-size-adjust: none;
+        }
+        body { 
+            margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
+        body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
+
+        body { background: #fff; }
+        header, footer, .container { max-width: 45em; margin: 0 auto; }
+
+        header { padding: 0 0.5em; color: #C90B0B; }
+        header img { border-radius: 40px; float: left; }
+        header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
+        header p span { font-size: 0.8em; font-weight: normal;}
+
+        .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
+            border-bottom: 1px solid #ccc;
+            border-top: 1px solid #ccc;
+        }
+
+        b, strong { font-weight: bold; }
+        img { border: 0; max-width: 100%; }
+
+    </style>
+
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
 
